--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@300&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-}
-
+    font-family: 'Montserrat', sans-serif;
+} 
 
 /*HEADER STYLE*/
 .header {
@@ -12,7 +14,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-
 }
 
 .logo {
@@ -30,32 +31,47 @@ body {
 /*MAIN SECTION*/
 .main {
     width: 100%;
-    background: url('./landing-image.jpg');
     position: relative;
 }
 
 /*Text overlay on landing image*/
 .text-overlay {
     position: absolute;
-    top: 30%;
-    left: 40%;
+    top: 20%;
+    left: 35%;
     transform: translate(-50%, -50%);
     color: white;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
     padding: 10px;
-    font-size: 36px;
+    font-size: 48px;
+    text-align: center;
 }
 
-img {
+.landing-image {
     max-width: 100%;
-    height: auto;
+    height: 1000px;
+    background: url(./images/landing-image.jpg);
+    background-size: cover;
+    background-position: center;
+   
 }
 
 /*Section below landing image*/
 .landing-section {
-    background: black;
+    background: url(./images/black-background.jpg);
+    margin: 0;
+    border: none;
+    background-size: cover;
+    background-position: center;
 }
 
+.landing-section-button {
+    cursor: pointer;
+    border-radius: 3px;
+    width: 50px;
+    height: 30px;
+    background: grey;
+}
 
 .welcome-section {
     display: flex;
@@ -63,7 +79,6 @@ img {
     align-items: center;
     justify-content: center;
     color: white;
-    padding: 50px;
 }
 
 
@@ -73,7 +88,6 @@ img {
     justify-content: center;
     gap: 50px;
     color: white;
-    padding: 50px;
 }
 
 .menu-dish-image {
@@ -102,7 +116,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(31, 31, 31);
+    background: black;
     height: 100px;
     color: white;
     gap: 5px;
