--- a/src/style.css
+++ b/src/style.css
@@ -161,13 +161,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    width: 800px;
+    margin-top: 20px;
 }
 
 .slide {
     width: 700px;
     height: auto;
-    display: none;
 }
 
 .previous,
