--- a/src/style.css
+++ b/src/style.css
@@ -27,13 +27,16 @@ body {
     gap: 50px;
 }
 
+.nav > a {
+    cursor: pointer;
+    transition: transform 0.5s ease-in-out;
+}
 
-/*MAIN SECTION*/
+.nav > a:hover {
+    transform: scale(1.3);
+}
 
-
-/*Text overlay on landing image*/
-
-/*Section below landing image*/
+/*Home page*/
 .landing-section {
     background: url(./images/black-background.jpg);
     margin: 0;
@@ -46,8 +49,10 @@ body {
     cursor: pointer;
     border-radius: 3px;
     width: 100px;
-    height: 50px;
-    background: grey;
+    border: none;
+    height: 40px;
+    background: #F13223;
+    color: white;
 }
 
 .anchor {
@@ -104,7 +109,8 @@ body {
 }
 
 
-.menu {
+.menu,
+.home {
     background: url(./images/black-background.jpg);
     background-size: 100% 1000px;
     background-position: center;
@@ -113,6 +119,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 
 .menu-heading {
     display: flex;
