--- a/src/style.css
+++ b/src/style.css
@@ -78,10 +78,6 @@ body {
     gap: 50px;
     color: white;
 }
-.menu-dish-image {
-    width: 250px;
-    height: auto;
-}
 .menu-text-section {
     display: flex;
     flex-direction: column;
@@ -97,6 +93,7 @@ body {
     padding: 50px;
 }
 
+/*Footer section*/
 .footer {
     display: flex;
     justify-content: center;
@@ -109,7 +106,7 @@ body {
 
 
 
-
+/*Restaurant menu page*/
 .menu-heading {
     display: flex;
     flex-direction: column;
@@ -118,7 +115,41 @@ body {
     color: white;
     margin: 0;
 }
+.image-container{
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 1000px;
+    height: auto;
+}
+.menu-image {
+    width: 300px;
+    height: 400px;
+}
+.dish-image-container {
+    position: relative;
+}
+.dish-info-overlay {
+    top: 0;
+    left: 30px;
+    opacity: 0;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    transition: opacity 0.3s ease-in-out;
+}
+.menu-image:hover {
+    opacity: 0.5;
+}
+.dish-image-container:hover .dish-info-overlay{
+    opacity: 0.5;
+}
 
+/*Restaurant about us page*/
 .about-page {
     display: flex;
     flex-direction: column;
@@ -129,7 +160,6 @@ body {
     text-align: justify;
     text-justify: inter-word;
 }
-
 .image-slider {
     display: flex;
     justify-content: center;
@@ -137,12 +167,10 @@ body {
     width: 800px;
     margin-top: 20px;
 }
-
 .slide {
     width: 700px;
     height: auto;
 }
-
 .previous,
 .next {
     cursor: pointer;
@@ -151,17 +179,8 @@ body {
     border: none;
     font-size: 32px;
 }
-
 .previous:hover,
 .next:hover {
     color: lightgray;
 }
 
-.menu-image {
-    width: 200px;
-    height: 300px;
-}
-
-.menu-image:hover {
-    opacity: 0.6;
-}
