--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,8 @@ body {
 .menu-image {
     width: 300px;
     height: 400px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 .dish-image-container {
     position: relative;
@@ -170,6 +172,8 @@ body {
 .slide {
     width: 700px;
     height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 .previous,
 .next {
@@ -184,3 +188,11 @@ body {
     color: lightgray;
 }
 
+
+/*Contact page*/
+.contact-page {
+    display: flex;
+    gap: 100px;
+    color: white;
+    margin-top: 30px;
+}
